--- a/inventory/group_vars/workers.yaml
+++ b/inventory/group_vars/workers.yaml
@@ -1,7 +1,5 @@
-# Variables associated with the physical NUC installation inventory
-ansible_user: abm-admin
-
 # automation setting for this is not a cloud resource
 is_cloud_resource: false
 
+# Use QEMU emulation (true) or native KVM (false)
 kubevirt_use_emulation: false
