--- a/inventory/host_vars/nuc-4.yaml
+++ b/inventory/host_vars/nuc-4.yaml
@@ -22,3 +22,8 @@ ingress_vip: "192.168.1.141"
 load_balancer_pool_cidr: [
   "192.168.1.141-192.168.1.149"
 ]
+# Floating IP addresses for Anthos Network Gateway (don't conflict with other IPs)
+anthos_network_gateway_ips: [
+  "192.168.1.20",
+  "192.168.1.21"
+]
