--- a/roles/abm-software/tasks/main.yml
+++ b/roles/abm-software/tasks/main.yml
@@ -280,6 +280,13 @@
   - abm-software
   - external-secrets
 
+### Anthos Network Gateway
+- name: "Install Anthos Network Gateway"
+  include: anthos-network-gateway.yaml
+  when: anthos_network_gateway_install == true
+  tags:
+  - ang-install
+
 - name: "Add CPU Monitor KubeVirt service files"
   include: cpumonitor-service.yaml
   tags:
