--- a/roles/validate/tasks/main.yml
+++ b/roles/validate/tasks/main.yml
@@ -59,6 +59,41 @@
   tags:
   - verify
 
+- name: Set Anthos Network Gateway to True if IPs have length
+  set_fact:
+    "anthos_network_gateway": True
+  when: anthos_network_gateway_ips | length > 0
+  tags:
+  - verify
+  - anthos-network-gateway
+
+- name: Set Anthos Network Gateway False if NO IPs have been defined
+  set_fact:
+    "anthos_network_gateway": False
+  when: anthos_network_gateway_ips | length == 0
+  tags:
+  - verify
+  - anthos-network-gateway
+
+- name: Anthos Network IS Enabled
+  run_once: true
+  debug:
+    msg: "Anthos Network Gateway Enabled?  {{ anthos_network_gateway }}"
+  when: anthos_network_gateway == True
+  tags:
+  - verify
+  - anthos-network-gateway
+
+- name: List Anthos Gateway Network IPs
+  run_once: true
+  debug:
+    msg: "IP: {{ item }}, {{ anthos_network_gateway }}"
+  loop: "{{ anthos_network_gateway_ips }}"
+  when: anthos_network_gateway == True
+  tags:
+  - verify
+  - anthos-network-gateway
+
 - name: Ensure at least 120GB on primary disk
   shell: |
     export PRIMARY_DISK=$(df -BG / | awk '{if (NR!=1) print $2}' | tr -d 'G')
