--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -1,5 +1,14 @@
 ---
 
+# Ansible Setttings (per each run)
+###
+###
+###
+
+# Ansible will use the key below
+ansible_ssh_private_key_file: "build-artifacts/consumer-edge-machine"
+ansible_ssh_common_args: "-F build-artifacts/ssh-config -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
+
 #######
 
 ####
