--- a/inventory/host_vars/edge-1.yaml
+++ b/inventory/host_vars/edge-1.yaml
@@ -6,21 +6,20 @@ machine_label: "edge-1"
 # Indicates that this is the primary machine in the cluster (only important for provisioning)
 primary_cluster_machine: true
 # Name of the "store" per the ACM repo
-acm_cluster_name: "store-chicago"
+acm_cluster_name: "denver"
 # This machine's IP
-control_plane_ip: "10.223.62.231"
+control_plane_ip: "192.168.3.10"
 # The other IPs in the cluster
 control_plane_ips: [
-  "10.223.62.231",
-  "10.223.62.232",
-  "10.223.62.233"
+  "192.168.3.10",
+  "192.168.3.11",
+  "192.168.3.12"
 ]
 # KubeAPI IP address
-control_plane_vip: "10.223.62.230"
+control_plane_vip: "192.168.3.1"
 # Ingress (k8s) address, must be in LoadBalancer pool below
-ingress_vip: "10.223.62.227"
+ingress_vip: "192.168.3.20"
 # Load balancers created in this range
 load_balancer_pool_cidr: [
-  "10.223.62.227-10.223.62.229",
-  "10.223.62.234-10.223.62.238"
+  "192.168.3.20-192.168.3.30" # 9 IPs for LB + 1 Ingress
 ]
