--- a/templates/inventory-physical-example.yaml
+++ b/templates/inventory-physical-example.yaml
@@ -8,9 +8,9 @@
 
 workers:
   hosts:
-    nuc-1:
-    nuc-2:
-    nuc-3:
-    # nuc-4:
-    # nuc-5:
-    # nuc-6:
+    edge-1:
+    edge-2:
+    edge-3:
+    # edge-4:
+    # edge-5:
+    # edge-6:
