Splitting audit rule files into separate files

--- a/roles/abm-post-install/tasks/setup-auditd.yml
+++ b/roles/abm-post-install/tasks/setup-auditd.yml
@@ -9,11 +9,128 @@
   - observability-audit-install
   - observability-setup
 
-- name: Copy auditd rules
+- name: Copy base auditd rules
   become: yes
   template:
     src: audit.rules.tf
     dest: "/etc/audit/rules.d/audit.rules"
+    owner: root
+    group: root
+    mode: '0640'
+  tags:
+  - observability-audit-install
+  - observability-setup
+  - auditd-config
+
+- name: Copy times auditd rules
+  become: yes
+  template:
+    src: audit_times.rules.tf
+    dest: "/etc/audit/rules.d/times.rules"
+    owner: root
+    group: root
+    mode: '0640'
+  tags:
+  - observability-audit-install
+  - observability-setup
+  - auditd-config
+
+- name: Copy system_locale auditd rules
+  become: yes
+  template:
+    src: audit_system_locale.rules.tf
+    dest: "/etc/audit/rules.d/system_locale.rules"
+    owner: root
+    group: root
+    mode: '0640'
+  tags:
+  - observability-audit-install
+  - observability-setup
+  - auditd-config
+
+- name: Copy identity auditd rules
+  become: yes
+  template:
+    src: audit_identity.rules.tf
+    dest: "/etc/audit/rules.d/identity.rules"
+    owner: root
+    group: root
+    mode: '0640'
+  tags:
+  - observability-audit-install
+  - observability-setup
+  - auditd-config
+
+- name: Copy logins auditd rules
+  become: yes
+  template:
+    src: audit_logins.rules.tf
+    dest: "/etc/audit/rules.d/logins.rules"
+    owner: root
+    group: root
+    mode: '0640'
+  tags:
+  - observability-audit-install
+  - observability-setup
+  - auditd-config
+
+- name: Copy permissions auditd rules
+  become: yes
+  template:
+    src: audit_permissions.rules.tf
+    dest: "/etc/audit/rules.d/permissions.rules"
+    owner: root
+    group: root
+    mode: '0640'
+  tags:
+  - observability-audit-install
+  - observability-setup
+  - auditd-config
+
+- name: Copy file_change auditd rules
+  become: yes
+  template:
+    src: audit_file_change.rules.tf
+    dest: "/etc/audit/rules.d/file_change.rules"
+    owner: root
+    group: root
+    mode: '0640'
+  tags:
+  - observability-audit-install
+  - observability-setup
+  - auditd-config
+
+- name: Copy scope auditd rules
+  become: yes
+  template:
+    src: audit_scope.rules.tf
+    dest: "/etc/audit/rules.d/scope.rules"
+    owner: root
+    group: root
+    mode: '0640'
+  tags:
+  - observability-audit-install
+  - observability-setup
+  - auditd-config
+
+- name: Copy sudo auditd rules
+  become: yes
+  template:
+    src: audit_sudo.rules.tf
+    dest: "/etc/audit/rules.d/sudo.rules"
+    owner: root
+    group: root
+    mode: '0640'
+  tags:
+  - observability-audit-install
+  - observability-setup
+  - auditd-config
+
+- name: Copy modules auditd rules
+  become: yes
+  template:
+    src: audit_modules.rules.tf
+    dest: "/etc/audit/rules.d/modules.rules"
     owner: root
     group: root
     mode: '0640'
