Upgrading External Secrets to 0.4.4

--- a/roles/abm-install/vars/main.yml
+++ b/roles/abm-install/vars/main.yml
@@ -8,6 +8,10 @@ abm_workspace_folder: "{{ abm_install_folder }}/bmctl-workspace"
 # Match with Google-Tools (by convention, not required, but good idea)
 remote_gsa_key: "/var/keys"
 
+# Edge API
+edge_api_enabled: false
+edge_api_location: us-central1 # same as cloud-ops region {{ google_region }}, but hard-coded as API is only in us-central1
+
 kubeconfig_shared_root: "/var/kubeconfig"
 kubeconfig_shared_location: "{{ kubeconfig_shared_root }}/kubeconfig"
 
