Fixing bugs for IPs and logging

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -112,7 +112,7 @@ setup_vlan: false
 vlan_interfaces: []
 
 # Observability package
-install_observability: true
+install_observability: false
 
 # All of the Service Accounts used in this solution
 ## LONGHORN
