--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -2,7 +2,8 @@
   shell: |
     kubectl create ns external-secrets || true
     kubectl create secret generic gcp-store-creds --from-file=/var/keys/external-secrets-k8s-creds.json -n external-secrets || true
-    kubectl label secret gcp-store-creds -n external-secrets type=gcpsm
+    kubectl label secret gcp-store-creds -n external-secrets type=gcpsm --overwrite
+  ignore_errors: yes
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
   when:
