--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -26,9 +26,10 @@ bmctl_version: "1.11.0" # If changed, set the `force_tools_upgrade` to true so n
 #### Anthos Config Management
 ####
 acm_root_repo: "{{ lookup('env', 'ROOT_REPO_URL') | default('https://gitlab.com/gcp-solutions-public/retail-edge/root-repo-ml-edge.git', True) }}"
+acm_repo_type: "{{ lookup('env', 'ROOT_REPO_TYPE') | default('token', True) }}"
 # gsutil ls -al gs://config-management-release/released/
 # Anthos Config Management version
-acm_version: "1.11.0"
+acm_version: "1.11.1/fwi-verification-earlier-access"  # HACK:this is a pre-release for 1.11.1
 
 ####
 #### Anthos Network Gateway
@@ -93,6 +94,7 @@ gcp_services_required:
   - stackdriver.googleapis.com
   - monitoring.googleapis.com
   - logging.googleapis.com
+  - sourcerepo.googleapis.com
   - secretmanager.googleapis.com
   - iamcredentials.googleapis.com
   - iam.googleapis.com
@@ -177,6 +179,14 @@ service_accounts: [
     roles: [
       "roles/gkehub.gatewayAdmin",
       "roles/gkehub.viewer"
+    ]
+  },
+  {
+    name: source-repo-agent,
+    keyfile: google-source-repo-agent.json,
+    description: "Agent used for GSR",
+    roles: [
+      "roles/source.reader"
     ]
   },
   {
