--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -1,3 +1,19 @@
+# TODO: Setup a conditional for idempotency (does this already exist?)
+- name: "Test for External Secrets secret"
+  include: kubectl-presence.yml
+  vars:
+    name: "gcp-store-creds"
+    type: "secrets"
+    namespace: "external-secrets"
+    kubeconfig: "{{ kubeconfig_shared_location }}"
+    fact_name: "has_es_secret"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
+  tags:
+  - external-secrets-operator
+  - external-secrets
+
 - name: "Create secret for External Secrets"
   shell: |
     kubectl create ns external-secrets || true
@@ -9,6 +25,7 @@
   when:
     - (primary_cluster_machine is defined)
     - (primary_cluster_machine == true)
+    - (has_es_secret == false)
   tags:
   - external-secrets-secret
   - external-secrets
