--- a/inventory/host_vars/nuc-1.yaml
+++ b/inventory/host_vars/nuc-1.yaml
@@ -5,7 +5,7 @@ machine_label: "nuc-1"
 # Indicates that this is the primary machine in the cluster (only important for provisioning)
 primary_cluster_machine: true
 # Name of the "store" per the ACM repo
-acm_cluster_name: "{{ cluster_name }}"
+acm_cluster_name: "{{ lookup('env', 'CLUSTER_ACM_NAME') | default('nuc-1', True) }}"
 # This machine's IP
 control_plane_ip: "192.168.1.11"
 # The other IPs in the cluster
