--- a/inventory/host_vars/edge-4.yaml
+++ b/inventory/host_vars/edge-4.yaml
@@ -6,7 +6,7 @@ machine_label: "edge-4"
 # Indicates that this is the primary machine in the cluster (only important for provisioning)
 primary_cluster_machine: true
 # Name of the "store" per the ACM repo
-acm_cluster_name: "store-global"
+acm_cluster_name: "{{ lookup('env', 'CLUSTER_ACM_NAME') | default('edge-4', True) }}"
 # This machine's IP
 control_plane_ip: "10.120.5.231"
 # The other IPs in the cluster
