--- a/roles/abm-install/vars/main.yml
+++ b/roles/abm-install/vars/main.yml
@@ -22,6 +22,8 @@ abm_install_user: "el-gato"
 install_type: standalone
 multi_network_enabled: true
 enable_application_logging: true
+dataplane_v2: false # primarily vSphere installs
+enable_mcc_network: "{{ network_gateway_mcc }}"
 
 # Skip preflight checks?
 skip_preflight: false
